<resources>
    <string name="app_name">Trading Robot</string>
    <string name="title_activity_main">Торговый робот %s</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_log">Логи</string>
    <string name="title_activity_statistics">Статистика</string>

    <string name="ACCOUNT">account</string>
    <string name="TICKER">ticker</string>
    <string name="TOKEN">token</string>
    <string name="algorithm_preferences">algorithm_preferences</string>
    <string name="auction_priority">auction_priority</string>
    <string name="auction_priority_data">auction_priority_data</string>
    <string name="day_auction_time">day_auction_time</string>
    <string name="evening_auction_time">evening_auction_time</string>
    <string name="evening_trades">evening_trades</string>
    <string name="increased_bid_ratio">increased_bid_ratio</string>
    <string name="load_settings">load_settings</string>
    <string name="main_preferences">main_preferences</string>
    <string name="main_request_delay_min">main_request_delay_min</string>
    <string name="market_orders">market_orders</string>
    <string name="money_after_spent">money_after_spent</string>
    <string name="other_priority">other_priority</string>
    <string name="other_priority_data">other_priority_data</string>
    <string name="price_preferences">price_preferences</string>
    <string name="recent_interval_min">recent_interval_min</string>
    <string name="replace_order_enabled">replace_order_enabled</string>
    <string name="replace_order_up">replace_order_up</string>
    <string name="save_settings">save_settings</string>
    <string name="selling_price_higher">selling_price_higher</string>
    <string name="shared_prefs_dir">shared_prefs</string>
    <string name="start_day_priority">start_day_priority</string>
    <string name="start_day_priority_data">start_day_priority_data</string>
    <string name="stop_purchase">stop_purchase</string>
    <string name="stop_purchase_dates">stop_purchase_dates</string>
    <string name="time_preferences">time_preferences</string>
    <string name="trading_day_priority">trading_day_priority</string>
    <string name="trading_day_priority_data">trading_day_priority_data</string>
    <string name="trading_evening_priority">trading_evening_priority</string>
    <string name="trading_evening_priority_data">trading_evening_priority_data</string>

    <!-- Имена файлов с логами -->
    <string name="logfile_name">logfile.txt</string>
    <string name="robotfile_name">robot.txt</string>
    <string name="moneyfile_name">money.txt</string>

    <!-- Массивы с инструментами для работы -->
    <array name="instruments_names">
        <item>Тинькофф Bonds</item>
        <item>Тинькофф Вечный</item>
        <item>Тинькофф iMOEX</item>
    </array>
    <array name="instruments_tickers">
        <item>TBRU</item>
        <item>TRUR</item>
        <item>TMOS</item>
    </array>

</resources>