<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Определение цены">

        <ListPreference
            android:key="@string/trading_day_priority"
            android:title="Дневная торговая сессия"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/trading_evening_priority"
            android:title="Вечерняя торговая сессия"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/start_day_priority"
            android:title="Начало торгового дня"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/auction_priority"
            android:title="Аукцион открытия"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/other_priority"
            android:title="Прочие ситуации"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>