<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="ru.lisss79.tinkofftradingrobot.activities.fragments.PriceSettingsFragment"
        app:key="@string/price_preferences"
        app:title="Настройки определения цены" />

    <Preference
        app:fragment="ru.lisss79.tinkofftradingrobot.activities.fragments.AlgorithmSettingsFragment"
        app:key="@string/algorithm_preferences"
        app:title="Настройки алгоритма" />

    <Preference
        app:fragment="ru.lisss79.tinkofftradingrobot.activities.fragments.TimeSettingsFragment"
        app:key="@string/time_preferences"
        app:title="Настройки времени заявок" />

    <Preference
        app:fragment="ru.lisss79.tinkofftradingrobot.activities.fragments.MainSettingsFragment"
        app:key="@string/main_preferences"
        app:title="Главные настройки" />


</PreferenceScreen>